<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lumitrol</string>

    <string name="nav_header_title">Lumitrol</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_control">Control</string>
    <string name="menu_gallery">Gallery</string>

    <string name="connect_button">Automatic Connection</string>
    <string name="connection_welcome">Enable the Wifi on your camera. Then, connect your device to the camera.</string>
    <string name="home_welcome_text">Discover your camera IP address automatically.</string>
    <string name="home_ip_text">Alternatively, you can enter the IP address of your camera below.</string>
    <string name="manual_connect_button">Manual Connection</string>

    <string name="default_ip">192.168.54.1</string>

    <string name="auto_tab">Automatic</string>
    <string name="manual_tab">Manual</string>
    <string name="title_activity_main2" tools:keep="@string/title_activity_main2">Main2Activity</string>
    <string name="tab_text_1" tools:keep="@string/tab_text_1">Tab 1</string>
    <string name="tab_text_2" tools:keep="@string/tab_text_2">Tab 2</string>
    <string name="home_status" tools:keep="@string/home_status">Connection Status</string>
    <string name="status_tab">Connection Status</string>
    <string name="connection_status_none">None</string>
    <string name="control_capture" tools:keep="@string/control_capture">Take Photo</string>
    <string name="dismiss">Dismiss</string>
    <string name="noIpAddressText">None</string>
    <string name="reset_ip_button_text">Reset</string>
    <string name="camera_detected">Camera Detected :</string>
    <string name="wifi_needs_connected">Wifi needs to be connected.</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="wi_fi">Wi-Fi :</string>
    <string name="ip_address">IP Address :</string>
    <string name="camera_model">Camera Model :</string>
</resources>
